# effective-mobile-test-assignment-backend-python

./: .env.example  Makefile  README.md  build.sh  main.py  manage.py  permissions.json  pyproject.toml
custom_auth_system/: asgi.py  settings.py  urls.py  views.py  wsgi.py
custom_auth_system/fixtures/: users.json
custom_auth_system/resources/: apps.py  urls.py  views.py
custom_auth_system/resources/templates/resources/: courses_list.html  index.html  lessons_list.html  professions_list.html  solution.html  solutions_list.html  tests_list.html
custom_auth_system/users/: admin.py  apps.py  decorators.py  forms.py  managers.py  middleware.py  models.py  tests.py  urls.py  utils_jwt.py  views.py  views_admin.py  views_auth.py
custom_auth_system/users/migrations/: 0001_initial.py  0002_alter_customuser_managers.py
custom_auth_system/users/templates/users/: create.html  delete.html  login.html  permission_list.html  permission_update.html  update.html
templates/: base.html  header.html  index.html
users/: models.py
