[project]
name = "effective-mobile-test-assignment-backend-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.2",
    "django-bootstrap5>=26.2",
    "psycopg[binary]>=3.3.3",
    "pyjwt>=2.11.0",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "pytest-django>=4.12.0",
    "ruff>=0.15.2",
]
